<resources>
<string name="app_name">Walki</string>
    <string name="paseo_en_curso_title">Paseo en Curso</string>
<string name="paseo_en_curso_label_paseo_con">Paseo con</string>
<string name="paseo_en_curso_label_paseador">Paseador: %1$s</string>
<string name="paseo_en_curso_label_paseador_placeholder">Paseador: —</string>
    <string name="paseo_en_curso_state_en_progreso">PASEO EN CURSO</string>
<string name="paseo_en_curso_label_horas">Horas</string>
<string name="paseo_en_curso_label_minutos">Minutos</string>
<string name="paseo_en_curso_label_segundos">Segundos</string>
<string name="paseo_en_curso_section_notas">Notas y fotos</string>
<string name="paseo_en_curso_hint_notas">Añade notas sobre el paseo</string>
<string name="paseo_en_curso_button_adjuntar">Adjuntar fotos</string>
<string name="paseo_en_curso_button_contactar_dueno">Contactar dueño</string>
<string name="paseo_en_curso_button_finalizar">Finalizar paseo</string>
    <string-array name="dias_semana">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
        <item>Sábado</item>
        <item>Domingo</item>
        <item>Todos los días</item>
    </string-array>
    <string-array name="anos_experiencia">
        <item>Menos de 1 año</item>
        <item>1 año</item>
        <item>2 años</item>
        <item>3 años</item>
        <item>4 años</item>
        <item>5 años</item>
        <item>6 años</item>
        <item>7 años</item>
        <item>8 años</item>
        <item>9 años</item>
        <item>10 años</item>
        <item>Más de 10 años</item>
    </string-array>
    <string-array name="bancos">
        <item>Banco Pichincha</item>
        <item>Banco del Pacífico</item>
        <item>Banco Guayaquil</item>
        <item>Produbanco</item>
        <item>Banco Internacional</item>
        <item>Banco Bolivariano</item>
        <item>Banco Solidario</item>
        <item>Banco de Machala</item>
        <item>Banco del Austro</item>
        <item>Banco de Loja</item>
        <item>Banco ProCredit</item>
        <item>Banco General Rumiñahui</item>
        <item>Banco de Fomento</item>
        <item>Cooperativa de Ahorro y Crédito JEP</item>
        <item>Cooperativa de Ahorro y Crédito Atuntaqui</item>
        <item>Cooperativa de Ahorro y Crédito Jardín Azuayo</item>
        <item>Otra</item>
    </string-array>
    <string name="title_activity_mascota_registro_paso1">Registra tu mascota</string>
    <string name="info_basica_title">Información básica de tu perro</string>
    <string name="nombre_mascota_hint">Nombre de tu perro</string>
    <string name="raza_mascota_prompt">Selecciona la raza</string>
    <string name="sexo_mascota_label">Sexo</string>
    <string name="sexo_macho">Macho</string>
    <string name="sexo_hembra">Hembra</string>
    <string name="fecha_nacimiento_hint">DD/MM/AAAA</string>
    <string name="tamano_mascota_label">Tamaño</string>
    <string name="tamano_pequeno">Pequeño</string>
    <string name="tamano_mediano">Mediano</string>
    <string name="tamano_grande">Grande</string>
    <string name="tamano_extra_grande">Extra Grande</string>
    <string name="peso_mascota_hint">Peso en kg</string>
    <string name="foto_principal_title">Foto Principal</string>
    <string name="foto_principal_desc">Agrega una foto clara de tu mascota</string>
    <string name="elegir_galeria_button">Elegir foto</string>
    <string name="tomar_foto_button">Tomar foto</string>
    <string name="guardar_button">Guardar</string>
    <string name="siguiente_button">Siguiente</string>
    <string name="title_activity_mascota_registro_paso2">Salud y bienestar</string>
    <string name="salud_vacunacion_label">Vacunas al día</string>
    <string name="salud_desparasitacion_label">Desparasitación al día</string>
    <string name="salud_ultima_visita_vet_label">Última visita al veterinario</string>
    <string name="salud_ultima_visita_vet_hint">Selecciona una fecha</string>
    <string name="salud_condiciones_medicas_label">Condiciones médicas</string>
    <string name="salud_condiciones_medicas_hint">Ej: Alergia al pollo, Problemas cardíacos</string>
    <string name="salud_condiciones_medicas_helper">Describe cualquier condición médica crónica o relevante.</string>
    <string name="salud_medicamentos_actuales_label">Medicamentos actuales</string>
    <string name="salud_medicamentos_actuales_hint">Ej: Prednisona 5mg, 1 cada 24 horas</string>
    <string name="salud_medicamentos_actuales_helper">Lista los medicamentos que la mascota está tomando actualmente.</string>
    <string name="salud_veterinario_nombre_label">Nombre del veterinario</string>
    <string name="salud_veterinario_nombre_hint">Dr. [Nombre Apellido]</string>
    <string name="salud_veterinario_telefono_label">Teléfono del veterinario</string>
    <string name="salud_veterinario_telefono_hint">0900000000</string>
    <string name="guardar_cambios_button">Guardar Cambios</string>
    <string name="title_activity_mascota_registro_paso3">Comportamiento y personalidad</string>
    <string name="comportamiento_energia_label">Nivel de energía</string>
    <string name="comportamiento_energia_baja">Bajo</string>
    <string name="comportamiento_energia_moderada">Moderado</string>
    <string name="comportamiento_energia_alta">Alto</string>
    <string name="comportamiento_con_personas_label">Comportamiento con personas</string>
    <string name="comportamiento_con_personas_amigable">Amigable</string>
    <string name="comportamiento_con_personas_timido">Tímido</string>
    <string name="comportamiento_con_personas_agresivo">Agresivo</string>
    <string name="comportamiento_con_animales_label">Comportamiento con otros animales</string>
    <string name="comportamiento_con_animales_amigable">Amigable</string>
    <string name="comportamiento_con_animales_indiferente">Indiferente</string>
    <string name="comportamiento_con_animales_agresivo">Agresivo</string>
    <string name="comportamiento_con_perros_label">Comportamiento con otros perros</string>
    <string name="comportamiento_con_perros_jugueton">Juguetón</string>
    <string name="comportamiento_habitos_correa_label">Hábitos de correa</string>
    <string name="comportamiento_habitos_correa_camina_bien">Camina bien con correa</string>
    <string name="comportamiento_habitos_correa_tira">Tira de la correa</string>
    <string name="comportamiento_habitos_correa_necesita_entrenamiento">Necesita entrenamiento</string>
    <string name="comportamiento_comandos_conocidos_label">Comandos que conoce</string>
    <string name="comportamiento_miedos_fobias_label">Miedos/Fobias</string>
    <string name="comportamiento_manias_habitos_label">Manías/Hábitos particulares</string>
    <string name="title_activity_mascota_registro_paso4">Instrucciones para el paseador</string>
    <string name="instrucciones_rutina_paseo_label">Rutina de paseo preferida</string>
    <string name="instrucciones_tipo_correa_arnes_label">Correa/Arnés</string>
    <string name="instrucciones_recompensas_label">Premios</string>
    <string name="instrucciones_emergencia_label">Instrucciones de emergencia</string>
    <string name="instrucciones_acceso_vivienda_label">Acceso a la vivienda</string>
    <string name="instrucciones_notas_adicionales_label">Notas adicionales</string>
    <string name="registro_exitoso_mascota">Mascota registrada con éxito</string>
    <string name="error_registro_mascota">Error al registrar mascota</string>
    <string name="title_mascota_registrada">Mascota Registrada</string>
    <string name="success_title">¡Mascota registrada con éxito!</string>
    <string name="success_subtitle">¿Deseas registrar otra mascota?</string>
    <string name="btn_add_another">Sí, añadir otra</string>
    <string name="btn_go_home">No, ir a inicio</string>
    <string name="cd_back">Volver</string>
    <string name="cd_add_another">Añadir otra mascota</string>
    <string name="cd_go_home">Ir al inicio</string>
    <string name="cd_pet_avatar">Avatar de la mascota</string>
    <string name="selfie_title">Verificación biométrica</string>
    <string name="selfie_subtitle">Alinea tu rostro en el óvalo y mantén buena luz</string>
    <string name="selfie_status_position">Ubica tu rostro dentro del óvalo</string>
    <string name="selfie_status_one_face">Solo una persona en cuadro</string>
    <string name="selfie_status_move_closer">Acércate un poco</string>
    <string name="selfie_status_move_back">Aléjate un poco</string>
    <string name="selfie_status_center">Centra tu rostro</string>
    <string name="selfie_status_open_eyes">Abre bien los ojos</string>
    <string name="selfie_status_ready">Listo, mantente firme</string>
    <string name="selfie_status_hold_still">Mantente quieto 1.5s</string>
    <string name="selfie_status_dark">Ilumina mejor tu rostro</string>
    <string name="selfie_status_blurry">Imagen borrosa, estabiliza</string>
    <string name="selfie_challenge_smile_title">Desafío: sonrisa suave</string>
    <string name="selfie_challenge_smile_hint">Sonríe levemente para continuar</string>
    <string name="selfie_challenge_smile_detected">¡Sonrisa detectada! Puedes tomar la foto</string>
    <string name="selfie_challenge_blink_title">Desafío: parpadeo</string>
    <string name="selfie_challenge_blink_hint">Parpadea una vez para continuar</string>
    <string name="selfie_challenge_blink_detected">Parpadeo detectado, ¡puedes tomar la foto!</string>
    <string name="selfie_challenge_turn_title">Desafío: gira un poco la cabeza</string>
    <string name="selfie_challenge_turn_hint">Gira suavemente a un lado</string>
    <string name="selfie_challenge_turn_detected">Giro detectado, siguiente paso</string>
    <string name="selfie_challenge_step">Paso %1$d de %2$d</string>
    <string name="selfie_challenge_done">Reto completado, toma la foto</string>
    <string name="selfie_challenge_timeout">Si no funciona, intenta otro gesto o mejora la luz</string>
    <string name="selfie_tips">Tip: limpia la cámara, busca buena luz y mantén tu cara centrada.</string>
    <string name="selfie_button_capture">Tomar selfie</string>
    <string name="disponibilidad_cancelar">Cancelar</string>
    <string name="horario_default_hora_inicio">Hora de inicio</string>
    <string name="horario_default_hora_fin">Hora de fin</string>
    <string name="bloqueo_title">Bloquear Días Específicos</string>
    <string name="bloqueo_razon">Razón del bloqueo (opcional)</string>
    <string name="bloqueo_razon_hint">Vacaciones, Compromiso personal, etc.</string>
    <string name="bloqueo_tipo">Tipo de bloqueo</string>
    <string name="bloqueo_tipo_dia_completo">Todo el día</string>
    <string name="bloqueo_tipo_manana">Solo mañana (antes de 12:00 PM)</string>
    <string name="bloqueo_tipo_tarde">Solo tarde (después de 12:00 PM)</string>
    <string name="bloqueo_confirmar">Bloquear Fechas</string>
    <string name="horario_especial_title">Horario Especial para Día Específico</string>
    <string name="horario_especial_fecha">Fecha seleccionada</string>
    <string name="horario_especial_solo_este_dia">Usar este horario solo para este día</string>
    <string name="horario_especial_guardar">Guardar Horario Especial</string>
    <string name="horario_especial_nota">Nota (opcional)</string>
    <string name="horario_especial_nota_hint">Solo tarde este día, etc.</string>
    <string name="dia_lunes_corto">L</string>
    <string name="dia_martes_corto">M</string>
    <string name="dia_miercoles_corto">X</string>
    <string name="dia_jueves_corto">J</string>
    <string name="dia_viernes_corto">V</string>
    <string name="dia_sabado_corto">S</string>
    <string name="dia_domingo_corto">D</string>
    <string name="accessibility_reservation_date_specific">Seleccionar fechas específicas para el paseo</string>
    <string name="accessibility_reservation_date_monthly">Seleccionar reserva mensual</string>
</resources>